update 代码规范&jdk新特性改造