@@ -13,7 +13,10 @@ import kfang.agent.feature.saas.diff.enums.OtherFiledLocationEnum;
 
 import java.lang.reflect.Field;
 import java.math.BigDecimal;
-import java.util.*;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
@@ -49,7 +52,7 @@ public class OperationDefaultHandle extends OperationHandle {
         // 模块boss字段
         OperationLogDefinition leader = null;
         // 是否递归调用 true 不是 false 是
-        //boolean isRecursion = Objects.isNull(entity);
+        // boolean isRecursion = Objects.isNull(entity);
         for (OperationLogDefinition definition : definitionList) {
 
             // 当前字段是否需要跳过
@@ -128,7 +131,7 @@ public class OperationDefaultHandle extends OperationHandle {
             List<OperationLogDefinition> collect = definitionList.stream()
                     .filter(otherFiled -> Objects.equals(otherFiled.getFieldRealName(), definition.getOtherFiledName()))
                     .limit(1)
-                    .collect(Collectors.toList());
+                    .toList();
 
             for (OperationLogDefinition otherFiled : ListUtil.optimize(collect)) {
                 Object fieldValue = ReflectionUtil.getFieldValue(tempEntity.getNowEntity(), otherFiled.getField());
@@ -228,9 +231,8 @@ public class OperationDefaultHandle extends OperationHandle {
             });
 
 
-
             // 获取当前listClass中存在有模块名拼接的字段 且保存快照
-            List<OperationLogDefinition> joinModuleNameList = classDefinitionList.stream().filter(OperationLogDefinition::isJoinModuleName).collect(Collectors.toList());
+            List<OperationLogDefinition> joinModuleNameList = classDefinitionList.stream().filter(OperationLogDefinition::isJoinModuleName).toList();
             Map<OperationLogDefinition, Boolean> snapsHoot = ListUtil.optimize(joinModuleNameList).stream().collect(Collectors.toMap(o -> o, OperationLogDefinition::isJoinModuleName));
 
             // 处理数据
@@ -282,7 +284,7 @@ public class OperationDefaultHandle extends OperationHandle {
             int mergeSum = definition.getMergeSum();
             List<OperationLogDefinition> mergeList = wrapper.getMergeList().stream()
                     .filter(merge -> Objects.equals(merge.getMergeName(), definition.getMergeName()))
-                    .sorted(Comparator.comparingInt(OperationLogDefinition::getMergeIndex)).collect(Collectors.toList());
+                    .sorted(Comparator.comparingInt(OperationLogDefinition::getMergeIndex)).toList();
 
             // 字段数量与mergeSum校验
             if (mergeList.size() != mergeSum) {
@@ -364,7 +366,7 @@ public class OperationDefaultHandle extends OperationHandle {
 
             // 处理新值
             List<Object> nowValueList = ObjectUtil.cast(nowValue);
-            List<Object> nowList = ListUtil.optimize(nowValueList).stream().sorted().collect(Collectors.toList());
+            List<Object> nowList = ListUtil.optimize(nowValueList).stream().sorted().toList();
             StringBuilder nowBuilder = new StringBuilder();
             for (Object now : nowList) {
                 now = super.handleEnum(now);
@@ -374,7 +376,7 @@ public class OperationDefaultHandle extends OperationHandle {
 
             // 处理旧值
             List<Object> historyValueList = ObjectUtil.cast(historyValue);
-            List<Object> historyList = ListUtil.optimize(historyValueList).stream().sorted().collect(Collectors.toList());
+            List<Object> historyList = ListUtil.optimize(historyValueList).stream().sorted().toList();
 
             StringBuilder historyBuilder = new StringBuilder();
             for (Object history : historyList) {
