@@ -18,13 +18,11 @@ import kfang.agent.feature.saas.diff.enums.FieldTypeEnum;
 import kfang.agent.feature.saas.diff.enums.OtherFiledLocationEnum;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.time.DateFormatUtils;
-import org.apache.commons.lang3.time.DateUtils;
 import org.springframework.format.annotation.DateTimeFormat;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * 操作记录处理器
@@ -129,15 +127,14 @@ public abstract class OperationHandle {
                 .sorted(Comparator.comparing(OperationLogDefinition::getDefinitionOrder)
                         // 第二遍排序将父字段排在最前然后子字段按照自身的order排序
                         .thenComparing(definition -> definition.getParentOrder() == 0 ? definition.getParentOrder() : definition.getOrder()))
-                .collect(Collectors.toList());
+                .toList();
         wrapper.setDefinitionList(orderList);
 
         // 封装合并字段 先根据合并字段名聚合再根据合并下标排序
         List<OperationLogDefinition> mergeList = definitionList.stream()
                 .filter(OperationLogDefinition::isMerge)
-                .sorted(Comparator.comparing(OperationLogDefinition::getMergeName)
-                        .thenComparingInt(OperationLogDefinition::getOrder))
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(OperationLogDefinition::getMergeName).thenComparingInt(OperationLogDefinition::getOrder))
+                .toList();
         wrapper.setMergeList(mergeList);
 
         // 处理对象字段class与对象字段的字段definition映射
@@ -283,13 +280,13 @@ public abstract class OperationHandle {
         OperationLogDefinition definition = new OperationLogDefinition();
         // 获取字段所属类的class的注解 优先使用这个
         OperationLog annotation = fieldWrapper.getField().getDeclaringClass().getAnnotation(OperationLog.class);
-        if(annotation != null){
+        if (annotation != null) {
             operationLog = annotation;
         }
 
         // 格式化字段名
         String[] stringFormats = operationLog.stringFormats();
-        List<String> formatList = Arrays.stream(stringFormats).collect(Collectors.toList());
+        List<String> formatList = Arrays.stream(stringFormats).toList();
         definition.setStringFormatList(formatList);
 
         // 字段类型
@@ -455,12 +452,13 @@ public abstract class OperationHandle {
 
         DateTimeFormat annotation = definition.getField().getAnnotation(DateTimeFormat.class);
         if (annotation == null) {
-            return DateUtil.format(DateFormat.yyyy_MM_dd, (Date)value);
+            return DateUtil.format(DateFormat.yyyy_MM_dd, (Date) value);
         }
 
 
-        return DateFormatUtils.format((Date)value, annotation.pattern());
+        return DateFormatUtils.format((Date) value, annotation.pattern());
     }
+
     /**
      * 根据新值旧值进行格式化
      *
